ボタンの位置を調整しました

--- a/kaihatuKOUNYU.html
+++ b/kaihatuKOUNYU.html
@@ -78,12 +78,12 @@ integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jI
 
   <div class="row">
     <div class="col-sm-6">
-        <div class="d-grid gap-2">
+        <div class="cart">
             <a href="kaihatuCART.html"  class="TOPNIMODORU"><button class="btn btn-outline-primary  me-2"   type="button">カートに戻る</button></a>
         </div>
     </div>
     <div class="col-sm-6">
-        <div class="d-grid gap-2">
+        <div class="kounyu">
             <a href="kaihatuKOUNYUKANRYOU.html"  class="TOPNIMODORU"><button class="btn btn-outline-primary  me-2"   type="button">購入する</button></a>
         </div>
     </div>
