cssでボタンの位置を調整しました

--- a/kaihatuCART.html
+++ b/kaihatuCART.html
@@ -33,7 +33,7 @@ integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jI
   <div class="OKINIIRI">
   <p class="fs-1">現在カートには何も入っていません</p>
   </div>
-  <div class="d-grid gap-2">
+  <div class="kounyuu">
   <a href="kaihatuKOUNYU.html"  class="TOPNIMODORU"><button class="btn btn-outline-primary  me-2"   type="button">購入手続きへ→</button></a>
   </div>
 
