--- a/kaihatuKOUNYU.html
+++ b/kaihatuKOUNYU.html
@@ -62,31 +62,25 @@ integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jI
     </div>
 
 
-  <div class="row">
-    <div class="col-sm-6">
+      <div class="yuubinotodoke">
       <p class="fs-1">郵便番号</p>
       <input type="email" class="form-control" id="exampleFormControlInput1">
-  </div>
-  </div>
+      </div>
 
-  <div class="row">
-    <div class="col-sm-6">
+
+    <div class="yuubinotodoke">
       <p class="fs-1">お届け先住所</p>
       <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
-  </div>
-  </div>
+    </div>
 
-  <div class="row">
-    <div class="col-sm-6">
+  
         <div class="cart">
-            <a href="kaihatuCART.html"  class="TOPNIMODORU"><button class="btn btn-outline-primary  me-2"   type="button">カートに戻る</button></a>
+            <a href="kaihatuCART.html"  class="TOPNIMODORU"><button class="btn btn-outline-primary  me-2 btn-lg"   type="button">カートに戻る</button></a>
         </div>
-    </div>
-    <div class="col-sm-6">
+
         <div class="kounyu">
-            <a href="kaihatuKOUNYUKANRYOU.html"  class="TOPNIMODORU"><button class="btn btn-outline-primary  me-2"   type="button">購入する</button></a>
+            <a href="kaihatuKOUNYUKANRYOU.html"  class="TOPNIMODORU"><button class="btn btn-outline-primary  me-2 btn-lg"   type="button">購入する</button></a>
         </div>
-    </div>
   </div>
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
