--- a/kaihatuLOGIN.html
+++ b/kaihatuLOGIN.html
@@ -39,8 +39,8 @@ integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jI
       <input type="password" class="form-control" id="inputPassword">
     </div>
   </div>
-  <div class="d-grid gap-2">
-    <a href="kaihatuTOP.html"  class="TOPNIMODORU"><button class="btn btn-outline-dark  me-2"   type="button">ログイン</button></a>
+  <div class="login">
+    <a href="kaihatuTOP.html"  class="TOPNIMODORU"><button class="btn btn-outline-dark  me-2 btn-lg"   type="button">ログイン</button></a>
     </div>
   
 </body>
