--- a/kaihatuLOGIN.html
+++ b/kaihatuLOGIN.html
@@ -39,9 +39,18 @@ integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jI
       <input type="password" class="form-control" id="inputPassword">
     </div>
   </div>
+
   <div class="login">
-    <a href="kaihatuTOP.html"  class="TOPNIMODORU"><button class="btn btn-outline-dark  me-2 btn-lg"   type="button">ログイン</button></a>
-    </div>
+    <a href="kaihatuTOP.html"  class="TOPNIMODORU"><button class="btn btn-outline-primary  me-2 btn-lg"   type="button">ログイン</button></a>
+  </div>
+
+  <div class="owasure">
+    <button class="btn btn-outline-dark  me-2 btn-sm"   type="button">パスワードをお忘れですか？</button>
+   </div>
+
+  <div class="sinki">
+    <a href=""  class="TOPNIMODORU"><button class="btn btn-outline-dark  me-2 btn-lg"   type="button"> 新規会員登録</button></a>
+  </div>
   
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
