登録画面の配置を整えました

--- a/kaihatuLOGIN.html
+++ b/kaihatuLOGIN.html
@@ -49,7 +49,7 @@ integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jI
    </div>
 
   <div class="sinki">
-    <a href=""  class="TOPNIMODORU"><button class="btn btn-outline-dark  me-2 btn-lg"   type="button"> 新規会員登録</button></a>
+    <a href="kaihatuTOUROKU.html"  class="TOPNIMODORU"><button class="btn btn-outline-dark  me-2 btn-lg"   type="button"> 新規会員登録</button></a>
   </div>
   
 </body>
