--- a/kaihatuTOUROKU.html
+++ b/kaihatuTOUROKU.html
@@ -29,7 +29,80 @@ integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jI
   </nav>
   </div>
   <p class="fs-1">会員登録</p>
+  <div class="naiyou">
   <p class="fs-3">下記の内容をご入力の上、おすすめください</p>
+  </div>
+  <div class="name">
+    <p class="fs-3">氏名</p>
+  </div>
+  <div class="text">
+    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+  </div>
+  <div class="name">
+    <p class="fs-3">氏名（フリガナ）</p>
+  </div>
+  <div class="text">
+    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+  </div>
+  <div class="name">
+    <p class="fs-3">メールアドレス</p>
+  </div>
+  <div class="text">
+    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+  </div>
+  <div class="name">
+    <p class="fs-3">パスワード</p>
+  </div>
+  <div class="text">
+    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+  </div>
+  <div class="name">
+    <p class="fs-3">郵便番号</p>
+  </div>
+  <div class="text">
+    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+  </div>
+  <div class="name">
+    <p class="fs-3">住所</p>
+  </div>
+  <div class="text">
+    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+  </div>
+  <div class="name">
+    <p class="fs-3">電話番号</p>
+  </div>
+  <div class="text">
+    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+  </div>
+  <div class="name">
+    <p class="fs-3">生年月日</p>
+  </div>
+  <div class="text">
+    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+  </div>
+  <div class="name">
+    <p class="fs-3">性別</p>
+  </div>
+  <div class="text">
+    <div class="form-check">
+      <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
+      <p class="fs-3">男</p>
+    </div>
+    <div class="form-check">
+      <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2" checked>
+      <p class="fs-3">女</p>
+    </div>
+    <div class="form-check">
+      <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
+      <p class="fs-3">その他</p>
+    </div>
+  </div>
+ 
+ <div class="touroku"> 
+    <a href="kaihatuTOP.html">
+    <button class="btn btn-primary btn-lg" type="button">登録</button>
+    </a>
+  </div>
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
