--- a/kaihatuLOGIN.html
+++ b/kaihatuLOGIN.html
@@ -32,9 +32,13 @@ integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jI
   <p class="fs-1">ロ  グ  イ  ン</p>
   <p class="fs-3">会員登録がお済みのお客様</p>
   <div class="mb-3">
-    <label for="exampleFormControlInput1" class="col-sm-2 form-label">メールアドレス</label>
+    <div class="mozi">
+      <p class="fs-3">メールアドレス</p>
+    </div>
     <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
-    <label for="inputPassword" class="col-sm-2 col-form-label">パスワード</label>
+    <div class="mozi">
+      <p class="fs-3">パスワード</p>
+    </div>
     <div class="col-sm-10">
       <input type="password" class="form-control" id="inputPassword">
     </div>
