--- a/kaihatuLOGIN.html
+++ b/kaihatuLOGIN.html
@@ -29,21 +29,21 @@ integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jI
   </nav>
   </div>
 
-  <p class="fs-1">ロ  グ  イ  ン</p>
+  <p class="fs-1">ログイン</p>
   <p class="fs-3">会員登録がお済みのお客様</p>
-  <div class="mb-3">
-    <div class="mozi">
-      <p class="fs-3">メールアドレス</p>
-    </div>
-    <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
-    <div class="mozi">
-      <p class="fs-3">パスワード</p>
-    </div>
-    <div class="col-sm-10">
-      <input type="password" class="form-control" id="inputPassword">
-    </div>
+  <div class="name">
+    <p class="fs-3">メールアドレス</p>
   </div>
-
+  <div class="text">
+    <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+  </div>
+  <div class="name">
+    <p class="fs-3">パスワード</p>
+  </div>
+  <div class="text">
+    <input type="password" class="form-control" id="inputPassword">
+  </div>
+  
   <div class="login">
     <a href="kaihatuTOP.html"  class="TOPNIMODORU"><button class="btn btn-outline-primary  me-2 btn-lg"   type="button">ログイン</button></a>
   </div>
