--- a/kaihatuLOGIN.html
+++ b/kaihatuLOGIN.html
@@ -35,7 +35,7 @@ integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jI
     <p class="fs-3">メールアドレス</p>
   </div>
   <div class="text">
-    <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+    <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="abc@example.com">
   </div>
   <div class="name">
     <p class="fs-3">パスワード</p>
