--- a/kaihatuTOUROKU.html
+++ b/kaihatuTOUROKU.html
@@ -89,7 +89,7 @@ integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jI
       <p class="fs-3">男</p>
     </div>
     <div class="form-check">
-      <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2" checked>
+      <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2">
       <p class="fs-3">女</p>
     </div>
     <div class="form-check">
