--- a/kaihatuSYOUSAI.html
+++ b/kaihatuSYOUSAI.html
@@ -71,7 +71,7 @@ integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jI
     </div>
 
     <div class="col-sm-6">
-      <a  class="TOPNIMODORU"><button class="btn btn-outline-primary  me-2"   type="button">お気に入り</button></a>
+      <a  class="TOPNIMODORU"><button class="btn btn-outline-primary  me-2"   type="button">お気に入り<i class="bi bi-star"></i></button></a>
     </div>
   </div>
 </div> 
@@ -94,7 +94,7 @@ integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jI
             <li><a class="dropdown-item" href="#">6</a></li>
     </ul>
     </div>
-            <a href="kaihatuCART.html"  class="TOPNIMODORU"><button class="btn btn-outline-primary  me-2"   type="button">カートに入れる</button></a>
+            <a href="kaihatuCART.html"  class="TOPNIMODORU"><button class="btn btn-outline-primary  me-2"   type="button">カートに入れる<i class="bi bi-cart"></i></button></a>
         <p>商品説明商品説明商品説明商品説明商品説明商品説明</p>
         <p>商品説明商品説明商品説明商品説明商品説明商品説明</p>
         <p>商品説明商品説明商品説明商品説明商品説明商品説明</p>
