--- a/kaihatuTOP.html
+++ b/kaihatuTOP.html
@@ -29,7 +29,7 @@ integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jI
   </nav>
   </div>
 
-      <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
+      <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel" height="500">
         <div class="carousel-inner">
           <div class="carousel-item active" data-bs-interval="1000">
             <a  href="kaihatuSYOUSAI.html"><img src="img/6107d6f78d8b1-750x421.jpg"   class="d-block w-100" alt="..."  height="500%"></a>
