数量のドロップダウンを変更しました

--- a/kaihatuKOUNYU.html
+++ b/kaihatuKOUNYU.html
@@ -33,12 +33,18 @@ integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jI
 
 <div class="row">
     <div class="col-sm-6">
+      <div class="okyakusamamei">
       <p class="fs-1">お客様名</p>
+      </div>
+      <div class="form">
       <input type="email" class="form-control" id="exampleFormControlInput1">
+      </div>
     </div>
     <div class="col-sm-6">
       <p class="fs-1">お支払方法</p>
+      <div class="form2">
       <input class="form-control" list="datalistOptions" id="exampleDataList" placeholder="お支払方法">
+      </div>
       <datalist id="datalistOptions">
       
         <option value="コンビニ/銀行">
@@ -53,11 +59,15 @@ integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jI
   <div class="row">
     <div class="col-sm-6">
       <p class="fs-1">メールアドレス</p>
+      <div class="form">
       <input type="email" class="form-control" id="exampleFormControlInput1">
+      </div>
     </div>
     <div class="col-sm-6">
       <p class="fs-1">電話番号</p>
+      <div class="form2">
       <input type="email" class="form-control" id="exampleFormControlInput1">
+      </div>
     </div>
     </div>
 
