--- a/kaihatuSYOUSAI.html
+++ b/kaihatuSYOUSAI.html
@@ -79,21 +79,15 @@ integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jI
  <div class="syohin">
    <h1>商品名</h1>
    <h1>￥10000</h1>
-   <div class="btn-group">
-    <button type="button" class="btn btn-secondary">数量</button>
-    <button type="button" class="btn btn-secondary dropdown-toggle dropdown-toggle-split" data-bs-toggle="dropdown" aria-expanded="false">
-      <span class="visually-hidden">Toggle Dropdown</span>
-    </button>
-    
-    <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="#">1</a></li>
-            <li><a class="dropdown-item" href="#">2</a></li>
-            <li><a class="dropdown-item" href="#">3</a></li>
-            <li><a class="dropdown-item" href="#">4</a></li>
-            <li><a class="dropdown-item" href="#">5</a></li>
-            <li><a class="dropdown-item" href="#">6</a></li>
-    </ul>
-    </div>
+   <select name="suuryo">
+    <option value="one">1</option>
+    <option value="two">2</option>
+    <option value="three">3</option>
+    <option value="four">4</option>
+    <option value="five">5</option>
+    <option value="six">6</option>
+   </select>
+   
             <a href="kaihatuCART.html"  class="TOPNIMODORU"><button class="btn btn-outline-primary  me-2"   type="button">カートに入れる<i class="bi bi-cart"></i></button></a>
         <p>商品説明商品説明商品説明商品説明商品説明商品説明</p>
         <p>商品説明商品説明商品説明商品説明商品説明商品説明</p>
