--- a/kaihatuKOUNYU.html
+++ b/kaihatuKOUNYU.html
@@ -29,19 +29,21 @@ integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jI
         </nav>
         </div>
 
-<p class="fs-1">合計金額～円</p>
+<h1 class="sum">合計金額～円</h1>
 
 <div class="row">
     <div class="col-sm-6">
       <div class="okyakusamamei">
-      <p class="fs-1">お客様名</p>
+      <div class="name">
+      <p class="fs-2">お客様名</p>
+      </div>
       </div>
       <div class="form">
       <input type="email" class="form-control" id="exampleFormControlInput1">
       </div>
     </div>
     <div class="col-sm-6">
-      <p class="fs-1">お支払方法</p>
+      <p class="fs-2">お支払方法</p>
       <div class="form2">
       <input class="form-control" list="datalistOptions" id="exampleDataList" placeholder="お支払方法">
       </div>
@@ -58,13 +60,15 @@ integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jI
 
   <div class="row">
     <div class="col-sm-6">
-      <p class="fs-1">メールアドレス</p>
+      <div class="name">
+      <p class="fs-2">メールアドレス</p>
+      </div>
       <div class="form">
       <input type="email" class="form-control" id="exampleFormControlInput1">
       </div>
     </div>
     <div class="col-sm-6">
-      <p class="fs-1">電話番号</p>
+      <p class="fs-2">電話番号</p>
       <div class="form2">
       <input type="email" class="form-control" id="exampleFormControlInput1">
       </div>
@@ -73,13 +77,13 @@ integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jI
 
 
       <div class="yuubinotodoke">
-      <p class="fs-1">郵便番号</p>
+      <p class="fs-2">郵便番号</p>
       <input type="email" class="form-control" id="exampleFormControlInput1">
       </div>
 
 
     <div class="yuubinotodoke">
-      <p class="fs-1">お届け先住所</p>
+      <p class="fs-2">お届け先住所</p>
       <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
     </div>
 
