--- a/kaihatuSYOUSAI.html
+++ b/kaihatuSYOUSAI.html
@@ -79,7 +79,7 @@ integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jI
  <div class="syohin">
    <h1>商品名</h1>
    <h1>￥10000</h1>
-   <select name="suuryo">
+   <select class="suuryo">
     <option value="one">1</option>
     <option value="two">2</option>
     <option value="three">3</option>
