--- a/kaihatuMYPAGE.html
+++ b/kaihatuMYPAGE.html
@@ -34,7 +34,7 @@
                 </a>
                 <form class="d-flex">
                     <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                    <button class="btn btn-outline-secondary" type="submit"><i class="bi bi-search"></i>Search</button>
+                    <button class="btn btn-outline-secondary me-2" type="submit"><i class="bi bi-search"></i>Search</button>
                     <a href="kaihatuCART.html"><button class="btn btn-outline-primary me-2" type="button"><i
                                 class="bi bi-cart"></i>cart</button></a>
                     <a href="kaihatuOKINIIRI.html"><button class="btn btn-outline-primary me-2" type="button"><i
