--- a/kaihatuSYOUSAI.html
+++ b/kaihatuSYOUSAI.html
@@ -79,7 +79,7 @@ integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jI
  <div class="syohin">
    <h1>商品名</h1>
    <h1>￥10000</h1>
-   <select class="suuryo">
+   <select ="suuryo">
     <option value="one">1</option>
     <option value="two">2</option>
     <option value="three">3</option>
@@ -89,9 +89,11 @@ integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jI
    </select>
    
             <a href="kaihatuCART.html"  class="TOPNIMODORU"><button class="btn btn-outline-primary  me-2"   type="button">カートに入れる<i class="bi bi-cart"></i></button></a>
+         <div class="setumei"> 
         <p>商品説明商品説明商品説明商品説明商品説明商品説明</p>
         <p>商品説明商品説明商品説明商品説明商品説明商品説明</p>
         <p>商品説明商品説明商品説明商品説明商品説明商品説明</p>
+        </div>
   </div>
 
 
