--- a/kaihatuMYPAGE.html
+++ b/kaihatuMYPAGE.html
@@ -32,7 +32,7 @@
                 <a class="navbar-brand" href="kaihatuTOP.html">
                     <img src="img/TopSix.png" alt="" width="85" height="70">
                 </a>
-                <form class="d-flex">
+                <form class="d-flex" action="kaihatuITIRAN.html">
                     <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
                     <button class="btn btn-outline-secondary me-2" type="submit"><i class="bi bi-search"></i>Search</button>
                     <a href="kaihatuCART.html"><button class="btn btn-outline-primary me-2" type="button"><i
