写真を追加して試しに説明文を書きました

--- a/kaihatuITIRAN.html
+++ b/kaihatuITIRAN.html
@@ -103,10 +103,10 @@ integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jI
        <div class="col-md-2">
         <div class="card">
          <a class="cardimg" href="kaihatuSYOUSAI.html" style="color:black">
-         <img src="img/pork-fries.jpg" class="card-img " alt="..." >
+         <img src="img/pokemon.jfif" class="card-img " alt="..." >
          <div class="card-body">
-          <h5 class="card-title">商品名</h5>
-          <h5>￥10000</h5>
+          <h5 class="card-title">ポケットモンスター バイオレット -Switch (【早期購入特典】プロモカード「ピカチュウ」 ×1 同梱)</h5>
+          <h5>6578円</h5>
          </a>
          </div>
         </div>
