--- a/kaihatuSYOUSAI.html
+++ b/kaihatuSYOUSAI.html
@@ -31,7 +31,7 @@ integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jI
 
   <div class="cartcheck">
     <div class="img">
-      <img src="img/OIP.jpg"   class="d-block w-100" alt="..."  weight="600" height="350">
+      <img src="img/pokemon.jfif"   class="d-block w-100" alt="..."  weight="600" height="350">
     </div>
     <div class="row">
       <div class="col-sm-2">
@@ -77,8 +77,8 @@ integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jI
 </div> 
 
  <div class="syohin">
-   <h1>商品名</h1>
-   <h1>￥10000</h1>
+   <h1>ポケットモンスター バイオレット -Switch (【早期購入特典】プロモカード「ピカチュウ」 ×1 同梱)</h1>
+   <h1>6578円</h1>
    <select ="suuryo">
     <option value="one">1</option>
     <option value="two">2</option>
@@ -90,9 +90,8 @@ integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jI
    
             <a href="kaihatuCART.html"  class="TOPNIMODORU"><button class="btn btn-outline-primary  me-2"   type="button">カートに入れる<i class="bi bi-cart"></i></button></a>
          <div class="setumei"> 
-        <p>商品説明商品説明商品説明商品説明商品説明商品説明</p>
-        <p>商品説明商品説明商品説明商品説明商品説明商品説明</p>
-        <p>商品説明商品説明商品説明商品説明商品説明商品説明</p>
+        <p>『ポケットモンスター』シリーズはオープンワールドへ。ポケモンを捕まえたり、交換したり、育ててバトルに挑んだり。『ポケットモンスター』シリーズならではの遊びを、"オープンワールド"世界で楽しめます。大自然や街には、至る所にポケモンたちが息づいており、境目なく広がるフィールドを自由に冒険することができます。														
+        </p>
         </div>
   </div>
 
