--- a/kaihatuITIRAN.html
+++ b/kaihatuITIRAN.html
@@ -96,15 +96,15 @@ integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jI
           <button type="button" class="btn btn-primary">7</button>
           <button type="button" class="btn btn-primary">8</button>
       </div>
-     <h1>ジャンル名</h1>
+     <h1>ゲームソフト</h1>
 
      <div class="container">
      <div class="row mt-5 gy-3">
        <div class="col-md-2">
         <div class="card">
          <a class="cardimg" href="kaihatuSYOUSAI.html" style="color:black">
-         <img src="img/pokemon.jfif" class="card-img " alt="..." >
-         <div class="card-body">
+         <img src="img/pokemon1.jpg" class="card-img " alt="..." >
+         <div class="card-body" >
           <h5 class="card-title">ポケットモンスター バイオレット -Switch (【早期購入特典】プロモカード「ピカチュウ」 ×1 同梱)</h5>
           <h5>6578円</h5>
          </a>
@@ -115,10 +115,11 @@ integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jI
         <div class="col-md-2">
         <div class="card">
         <a href="kaihatuSYOUSAI.html" style="color:black">
-        <img src="img/pork-fries.jpg" class="card-img" alt="..." >
+        <img src="img/smabra1.jpg" class="card-img" alt="..." height="170">
         <div class="card-body">
-          <h5 class="card-title">商品名</h5>
-          <h5>￥10000</h5>
+          <h5 class="card-title">大乱闘スマッシュブラザーズ SPECIAL - Switch
+          </h5>
+          <h5>7920円</h5>
         </a>
         </div>
         </div>
