--- a/kaihatuSYOUSAI.html
+++ b/kaihatuSYOUSAI.html
@@ -20,7 +20,7 @@ integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jI
        </a>
        <form class="d-flex" action="kaihatuITIRAN.html">
         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-secondary" type="submit"><i class="bi bi-search"></i>Search</button>
+        <button class="btn btn-outline-secondary me-2" type="submit"><i class="bi bi-search"></i>Search</button>
               <a  href="kaihatuCART.html"><button class="btn btn-outline-primary me-2" type="button"><i class="bi bi-cart"></i>cart</button></a>
               <a  href="kaihatuOKINIIRI.html"><button class="btn btn-outline-primary me-2" type="button"><i class="bi bi-star"></i>favorite</button></a>
               <a  href="kaihatuLOGIN.html"><button class="btn btn-outline-primary me-2" type="button"><i class="bi bi-person-circle"></i>login</button></a>
@@ -31,38 +31,27 @@ integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jI
 
   <div class="cartcheck">
     <div class="img">
-      <img src="img/pokemon.jfif"   class="d-block w-100" alt="..."  weight="600" height="350">
+      <img src="img/pokemon1.jpg"   class="d-block w-100" alt="..."  weight="100%" height="400">
     </div>
     <div class="row">
-      <div class="col-sm-2">
+      <div class="col-sm-4">
         <div class="card bg-dark text-white">
-          <img src="img/stand1_front05_man.png" class="card-img" alt="..."  height="80">
+          <img src="img/pokemon2.jpg" class="card-img" alt="..."  height="100">
         </div>
       </div>
 
-      <div class="col-sm-2">
+      <div class="col-sm-4">
         <div class="card bg-dark text-white">
-          <img src="img/stand2_back05_man.png" class="card-img" alt="..."  height="80">
+          <img src="img/pokemon3.jpg" class="card-img" alt="..."  height="100">
         </div>
       </div>
 
-      <div class="col-sm-2">
+      <div class="col-sm-4">
         <div class="card bg-dark text-white">
-          <img src="img/stand3_side05_man.png" class="card-img" alt="..."  height="80">
+          <img src="img/pokemon4.jpg" class="card-img" alt="..."  height="100">
         </div>
       </div>
 
-      <div class="col-sm-2">
-        <div class="card bg-dark text-white">
-          <img src="img/stand4_top05_man.png" class="card-img" alt="..."  height="80">
-        </div>
-      </div>
-
-      <div class="col-sm-2">
-      <div class="card bg-dark text-white">
-        <img src="img/stand1_front05_man.png" class="card-img" alt="..."  height="80">
-      </div>
-      </div>
   </div>
 
   <div class="row">
@@ -86,13 +75,18 @@ integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jI
     <option value="four">4</option>
     <option value="five">5</option>
     <option value="six">6</option>
+    <option value="seven">7</option>
+    <option value="eight">8</option>
+    <option value="nine">9</option>
+    <option value="ten">10</option>
    </select>
    
             <a href="kaihatuCART.html"  class="TOPNIMODORU"><button class="btn btn-outline-primary  me-2"   type="button">カートに入れる<i class="bi bi-cart"></i></button></a>
-         <div class="setumei"> 
+  </div>
+
+  <div class="setumei"> 
         <p>『ポケットモンスター』シリーズはオープンワールドへ。ポケモンを捕まえたり、交換したり、育ててバトルに挑んだり。『ポケットモンスター』シリーズならではの遊びを、"オープンワールド"世界で楽しめます。大自然や街には、至る所にポケモンたちが息づいており、境目なく広がるフィールドを自由に冒険することができます。														
         </p>
-        </div>
   </div>
 
 
