--- a/kaihatuITIRAN.html
+++ b/kaihatuITIRAN.html
@@ -112,6 +112,18 @@ integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jI
         </div>
        </div>
 
+       <div class="col-md-2">
+        <div class="card">
+         <a href="kaihatuSYOUSAI.html" style="color:black">
+        <img src="img/pokemon(2).jpg" class="card-img" alt="..." >
+        <div class="card-body">
+              <h5 class="card-title">ポケットモンスター スカーレット -Switch (【早期購入特典】プロモカード「ピカチュウ」 ×1 同梱)</h5>
+              <h5>6578円</h5>
+        </a>
+        </div>
+        </div>
+        </div>
+
         <div class="col-md-2">
         <div class="card">
         <a href="kaihatuSYOUSAI.html" style="color:black">
@@ -125,17 +137,6 @@ integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jI
         </div>
         </div>
 
-        <div class="col-md-2">
-        <div class="card">
-         <a href="kaihatuSYOUSAI.html" style="color:black">
-        <img src="img/pork-fries.jpg" class="card-img" alt="..." >
-        <div class="card-body">
-              <h5 class="card-title">商品名</h5>
-              <h5>￥10000</h5>
-        </a>
-        </div>
-        </div>
-        </div>
 
         <div class="col-md-2">
         <div class="card">
