--- a/kaihatuSYOUSAI.html
+++ b/kaihatuSYOUSAI.html
@@ -54,20 +54,21 @@ integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jI
 
   </div>
 
+
   <div class="row">
     <div class="col-sm-6">
-      <a href="kaihatuTOP.html"  class="TOPNIMODORU"><button class="btn btn-outline-primary  me-2"   type="button">お問い合わせ</button></a>
+      <a href="kaihatuTOP.html"  class="TOPNIMODORU"><button class="btn btn-outline-primary btn-lg"   type="button">お問い合わせ</button></a>
     </div>
 
     <div class="col-sm-6">
-      <a  class="TOPNIMODORU"><button class="btn btn-outline-primary  me-2"   type="button">お気に入り<i class="bi bi-star"></i></button></a>
+      <a  class="TOPNIMODORU"><button class="btn btn-outline-primary btn-lg"   type="button">お気に入り<i class="bi bi-star"></i></button></a>
     </div>
   </div>
 </div> 
 
  <div class="syohin">
-   <h1>ポケットモンスター バイオレット -Switch (【早期購入特典】プロモカード「ピカチュウ」 ×1 同梱)</h1>
-   <h1>6578円</h1>
+   <h1 class="title">ポケットモンスター バイオレット -Switch (【早期購入特典】プロモカード「ピカチュウ」 ×1 同梱)</h1>
+   <h1 class="price">6578円</h1>
    <select ="suuryo">
     <option value="one">1</option>
     <option value="two">2</option>
@@ -81,7 +82,7 @@ integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jI
     <option value="ten">10</option>
    </select>
    
-            <a href="kaihatuCART.html"  class="TOPNIMODORU"><button class="btn btn-outline-primary  me-2"   type="button">カートに入れる<i class="bi bi-cart"></i></button></a>
+            <a href="kaihatuCART.html"  class="TOPNIMODORU"><button class="btn btn-outline-primary btn-lg   type="button">カートに入れる<i class="bi bi-cart"></i></button></a>
   </div>
 
   <div class="setumei"> 
