画像サイズを変更しました

--- a/kaihatuTOP.html
+++ b/kaihatuTOP.html
@@ -32,13 +32,13 @@ integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jI
       <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel" width="">
         <div class="carousel-inner">
           <div class="carousel-item active" data-bs-interval="1000">
-            <a  href="kaihatuSYOUSAI.html"><img src="img/6107d6f78d8b1-750x421.jpg"   class="d-block w-100" alt="..."></a>
+            <a  href="kaihatuSYOUSAI.html"><img src="img/switch.webp"   class="d-block w-100" alt="..."></a>
           </div>
           <div class="carousel-item " data-bs-interval="1000">
-            <a  href="kaihatuSYOUSAI.html"><img src="img/1.png"  class="d-block w-100" alt="..." ></a>
+            <a  href="kaihatuSYOUSAI.html"><img src="img/sns.webp"  class="d-block w-100" alt="..." ></a>
           </div>
           <div class="carousel-item " data-bs-interval="1000">
-            <a  href="kaihatuSYOUSAI.html"><img src="img/PS5.jpg" class="d-block w-100" alt="..."></a>
+            <a  href="kaihatuSYOUSAI.html"><img src="img/ps5-buy-now-product-thumbnail-01-en-18mar22.webp" class="d-block w-100" alt="..."></a>
           </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="prev">
@@ -58,7 +58,7 @@ integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jI
         <div class="row mb-3 gr-3">
         <div class="col-sm-6">
           <div class="card bg-dark text-white">
-            <a  href="kaihatuITIRAN.html" style="color:white"><img src="img/mainvisual_02_RGB._TTW_.png" class="card-img" alt="..."  height="353%">
+            <a  href="kaihatuITIRAN.html" style="color:whitesmoke"><img src="img/mainvisual_02_RGB._TTW_.png" class="card-img" alt="..."  height="353%">
             <div class="card-img-overlay">
               <h5 class="card-title">ゲームソフト</h5>
               <p class="card-text">様々なジャンルのゲームソフトを取り扱っています</p>
@@ -82,7 +82,7 @@ integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jI
       <div class="row">
         <div class="col-sm-6">
           <div class="card bg-dark text-white">
-            <a  href="kaihatuITIRAN.html" style="color:blue"><img src="img/PS5.jpg" class="card-img" alt="..."   height="353%">
+            <a  href="kaihatuITIRAN.html" style="color:black"><img src="img/PS5.jpg" class="card-img" alt="..."   height="353%">
             <div class="card-img-overlay">
               <h5 class="card-title">ゲーム機</h5>
               <p class="card-text">様々なゲーム機を取り扱っています</p>
