--- a/kaihatuTOUROKU.html
+++ b/kaihatuTOUROKU.html
@@ -94,7 +94,7 @@ integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jI
     </div>
     <div class="form-check">
       <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
-      <p class="fs-3">その他</p>
+      <p class="fs-3">答えたくない</p>
     </div>
   </div>
  
