画像を変更しました

--- a/kaihatuITIRAN.html
+++ b/kaihatuITIRAN.html
@@ -106,7 +106,7 @@ integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jI
          <img src="img/pokemon1.jpg" class="card-img " alt="..." >
          <div class="card-body" >
           <h5 class="card-title">ポケットモンスター バイオレット -Switch (【早期購入特典】プロモカード「ピカチュウ」 ×1 同梱)</h5>
-          <h5>6578円</h5>
+          <h5 class="price">6578円</h5>
          </a>
          </div>
         </div>
@@ -118,7 +118,7 @@ integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jI
         <img src="img/pokemon(2).jpg" class="card-img" alt="..." >
         <div class="card-body">
               <h5 class="card-title">ポケットモンスター スカーレット -Switch (【早期購入特典】プロモカード「ピカチュウ」 ×1 同梱)</h5>
-              <h5>6578円</h5>
+              <h5 class="price">6578円</h5>
         </a>
         </div>
         </div>
@@ -131,7 +131,7 @@ integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jI
         <div class="card-body">
           <h5 class="card-title">大乱闘スマッシュブラザーズ SPECIAL - Switch
           </h5>
-          <h5>7920円</h5>
+          <h5 class="price">7920円</h5>
         </a>
         </div>
         </div>
@@ -141,10 +141,10 @@ integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jI
         <div class="col-md-2">
         <div class="card">
         <a href="kaihatuSYOUSAI.html" style="color:black">
-        <img src="img/pork-fries.jpg" class="card-img" alt="..." >
+        <img src="img/spra.jpg" class="card-img" alt="..." height="170" >
         <div class="card-body">
-                  <h5 class="card-title">商品名</h5>
-                  <h5>￥10000</h5>
+                  <h5 class="card-title">スプラトゥーン3 -Switch</h5>
+                  <h5 class="price">6578円</h5>
         </a>
         </div>
         </div>
@@ -153,10 +153,11 @@ integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jI
         <div class="col-md-2">
         <div class="card">
         <a href="kaihatuSYOUSAI.html" style="color:black">
-        <img src="img/pork-fries.jpg" class="card-img" alt="..." >
+        <img src="img/monhan.jpg" class="card-img" alt="..." height="170" >
         <div class="card-body">
-                    <h5 class="card-title">商品名</h5>
-                    <h5>￥10000</h5>
+                    <h5 class="card-title">モンスターハンターワールド:アイスボーン マスターエディション - PS4
+                    </h5>
+                    <h5 class="price">4390円</h5>
         </a>
         </div>
         </div>
@@ -165,10 +166,11 @@ integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jI
         <div class="col-md-2">
         <div class="card">
         <a href="kaihatuSYOUSAI.html" style="color:black">
-        <img src="img/pork-fries.jpg" class="card-img" alt="..." >
+        <img src="img/bouei.jpg" class="card-img" alt="..." height="170" >
         <div class="card-body">
-                    <h5 class="card-title">商品名</h5>
-                    <h5>￥10000</h5>
+                    <h5 class="card-title">【PS5】地球防衛軍6
+                    </h5>
+                    <h5 class="price">7079円</h5>
         </a>
         </div>
         </div>
@@ -186,7 +188,7 @@ integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jI
             <img src="img/pork-fries.jpg" class="card-img " alt="..." >
             <div class="card-body">
              <h5 class="card-title">商品名</h5>
-             <h5>￥10000</h5>
+             <h5 class="price">￥10000</h5>
             </a>
             </div>
            </div>
@@ -198,7 +200,7 @@ integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jI
            <img src="img/pork-fries.jpg" class="card-img" alt="..." >
            <div class="card-body">
              <h5 class="card-title">商品名</h5>
-             <h5>￥10000</h5>
+             <h5 class="price">￥10000</h5>
            </a>
            </div>
            </div>
@@ -210,7 +212,7 @@ integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jI
            <img src="img/pork-fries.jpg" class="card-img" alt="..." >
            <div class="card-body">
                  <h5 class="card-title">商品名</h5>
-                 <h5>￥10000</h5>
+                 <h5 class="price">￥10000</h5>
            </a>
            </div>
            </div>
@@ -222,7 +224,7 @@ integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jI
            <img src="img/pork-fries.jpg" class="card-img" alt="..." >
            <div class="card-body">
                      <h5 class="card-title">商品名</h5>
-                     <h5>￥10000</h5>
+                     <h5 class="price">￥10000</h5>
            </a>
            </div>
            </div>
@@ -234,7 +236,7 @@ integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jI
            <img src="img/pork-fries.jpg" class="card-img" alt="..." >
            <div class="card-body">
                        <h5 class="card-title">商品名</h5>
-                       <h5>￥10000</h5>
+                       <h5 class="price">￥10000</h5>
            </a>
            </div>
            </div>
@@ -246,7 +248,7 @@ integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jI
            <img src="img/pork-fries.jpg" class="card-img" alt="..." >
            <div class="card-body">
                        <h5 class="card-title">商品名</h5>
-                       <h5>￥10000</h5>
+                       <h5 class="price">￥10000</h5>
            </a>
            </div>
            </div>
