スライドの統一とお問い合わせに移動できるようにした

--- a/kaihatuTOP.html
+++ b/kaihatuTOP.html
@@ -32,13 +32,13 @@ integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jI
       <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel" width="">
         <div class="carousel-inner">
           <div class="carousel-item active" data-bs-interval="1000">
-            <a  href="kaihatuSYOUSAI.html"><img src="img/6107d6f78d8b1-750x421.jpg"   class="d-block w-100" alt="..."></a>
+            <a  href="kaihatuSYOUSAI.html"><img src="img/6107d6f78d8b1-750x421.jpg" alt = "任天堂switch" width = "640" height = "364" class="d-block w-100" class="d-block w-100" alt="..." ></a>
           </div>
           <div class="carousel-item " data-bs-interval="1000">
-            <a  href="kaihatuSYOUSAI.html"><img src="img/1.png"  class="d-block w-100" alt="..." ></a>
+            <a  href="kaihatuSYOUSAI.html"><img src="img/1.png" alt = "任天堂switch" width = "640" height = "364" class="d-block w-100" class="d-block w-100" alt="..." ></a>
           </div>
           <div class="carousel-item " data-bs-interval="1000">
-            <a  href="kaihatuSYOUSAI.html"><img src="img/PS5.jpg" class="d-block w-100" alt="..."></a>
+            <a  href="kaihatuSYOUSAI.html"><img src="img/PS5.jpg" alt = "任天堂switch" width = "640" height = "364" class="d-block w-100"  class="d-block w-100" alt="..."></a>
           </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="prev">
@@ -103,7 +103,7 @@ integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jI
       </div>
       </a>
 
-
+      <div id = "contactt"></div>
         <p class="fs-1">お問い合わせ</p>
         <p class="fs-2">contact</p>
 
