--- a/kaihatuSYOUSAI.html
+++ b/kaihatuSYOUSAI.html
@@ -57,7 +57,7 @@ integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jI
 
   <div class="row">
     <div class="col-sm-6">
-      <a href="kaihatuTOP.html"  class="TOPNIMODORU"><button class="btn btn-outline-primary btn-lg"   type="button">お問い合わせ</button></a>
+      <a href="kaihatuTOP.html#contactt"  class="TOPNIMODORU"><button class="btn btn-outline-primary btn-lg"   type="button">お問い合わせ</button></a>
     </div>
 
     <div class="col-sm-6">
