画像を変更しました

--- a/kaihatuITIRAN.html
+++ b/kaihatuITIRAN.html
@@ -32,45 +32,45 @@ integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jI
     <div class="itiran">
         <h5>セール品</h5>
         <div class="col-sm-9">
-        <a href="kaihatuSYOUSAI.html">
-        <div class="card bg-dark text-white">
-          <img src="img/chicken-breast-filet.jpg" class="card-img" alt="..." height="80">
+        <a href="kaihatuSYOUSAI_SALE.html">
+        <div class="card text-white">
+          <img src="img/nintendo.switch.jpg" class="card-img" alt="..." height="80">
         </div>
         </div>
         </a>
         <div class="col-sm-9">
-        <a href="kaihatuSYOUSAI.html">
-        <div class="card bg-dark text-white">
-          <img src="img/gourmet-pasta.jpg" class="card-img" alt="..."  height="80">
+        <a href="kaihatuSYOUSAI_SALE.html">
+        <div class="card text-white">
+          <img src="img/pokemon1.jpg" class="card-img" alt="..."  height="80">
         </div>
         </div>
         </a>
         <div class="col-sm-9">
-        <a href="kaihatuSYOUSAI.html">
-        <div class="card bg-dark text-white">
-          <img src="img/pork-fries.jpg" class="card-img" alt="..."  height="80">
+        <a href="kaihatuSYOUSAI_SALE.html">
+        <div class="card text-white">
+          <img src="img/ps5-buy-now-product-thumbnail-01-en-18mar22.webp" class="card-img" alt="..."  height="80">
         </div>
         </div>
         </a>
         <h5>今月の人気商品</h5>
         <div class="col-sm-9">
         <a href="kaihatuSYOUSAI.html">
-        <div class="card bg-dark text-white">
-          <img src="img/chicken-breast-filet.jpg" class="card-img" alt="..." height="80">
+        <div class="card  text-white">
+          <img src="img/spra.jpg" class="card-img" alt="..." height="100">
         </div>
         </div>
         </a>
         <div class="col-sm-9">
         <a href="kaihatuSYOUSAI.html">
-        <div class="card bg-dark text-white">
-          <img src="img/gourmet-pasta.jpg" class="card-img" alt="..."  height="80">
+        <div class="card  text-white">
+          <img src="img/pokemon(2).jpg" class="card-img" alt="..." height="100">
         </div>
         </div>
         </a>
         <div class="col-sm-9">
         <a href="kaihatuSYOUSAI.html">
-        <div class="card bg-dark text-white">
-          <img src="img/pork-fries.jpg" class="card-img" alt="..."  height="80">
+        <div class="card  text-white">
+          <img src="img/procon.jpg" class="card-img" alt="..."  height="100">
         </div>
         </div>
         </a> 
