カードやボタンの高さを調整しました

--- a/kaihatuCART.html
+++ b/kaihatuCART.html
@@ -34,7 +34,7 @@ integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jI
   <p class="fs-1">現在カートには何も入っていません</p>
   </div>
   <div class="kounyuu">
-  <a href="kaihatuKOUNYU.html"  class="TOPNIMODORU"><button class="btn btn-outline-primary  me-2"   type="button">購入手続きへ→</button></a>
+  <a href="kaihatuKOUNYU.html"  class="TOPNIMODORU"><button class="btn btn-outline-primary  btn-lg"   type="button">購入手続きへ→</button></a>
   </div>
   
 
