--- a/kaihatuITIRAN.html
+++ b/kaihatuITIRAN.html
@@ -101,14 +101,14 @@ integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jI
      <div class="container">
      <div class="row mt-5 gy-3">
        <div class="col-md-2">
-        <div class="card" >
+        <div class="card">
          <a class="cardimg" href="kaihatuSYOUSAI.html" style="text-decoration: none;color:black">
          <img src="img/pokemon1.jpg" class="card-img " alt="..." height="170">
          <div class="card-body" >
           <h5 class="card-title">ポケットモンスター バイオレット -Switch (【早期購入特典】プロモカード「ピカチュウ」 ×1 同梱)</h5>
           <h5 class="price">6578円</h5>
-         </a>
          </div>
+         </a>
         </div>
        </div>
 
@@ -131,9 +131,9 @@ integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jI
         <div class="card-body">
           <h5 class="card-title">大乱闘スマッシュブラザーズ SPECIAL - Switch
           </h5>
-          <h5 class="price">7920円</h5>
-        </a>
+          <h5 class="price"><br><br>7920円</h5>
         </div>
+        </a>
         </div>
         </div>
 
@@ -143,10 +143,10 @@ integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jI
         <a href="kaihatuSYOUSAI.html" style="text-decoration: none;color:black">
         <img src="img/spra.jpg" class="card-img" alt="..." height="170" >
         <div class="card-body">
-                  <h5 class="card-title">スプラトゥーン3 -Switch</h5>
-                  <h5 class="price">6578円</h5>
-        </a>
+                  <h5 class="card-title">スプラトゥーン3-Switch</h5>
+                  <h5 class="price"><br><br><br><br>6578円</h5>
         </div>
+        </a>
         </div>
         </div>
 
@@ -157,9 +157,9 @@ integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jI
           <div class="card-body">
                 <h5 class="card-title">ニーア オートマタ ジ エンド オブ ヨルハ エディション 
                </h5>
-                <h5 class="price">4555円</h5>
-          </a>
+                <h5 class="price"><br><br><br>4555円</h5>
           </div>
+          </a>
           </div>
           </div>
 
@@ -170,9 +170,9 @@ integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jI
             <div class="card-body">
                       <h5 class="card-title">モンスターハンターライズ  サンブレイク 
                      </h5>
-                      <h5 class="price">8789円</h5>
-            </a>
+                      <h5 class="price"><br><br><br>8789円</h5>
             </div>
+            </a>
             </div>
             </div>
         
@@ -192,9 +192,9 @@ integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jI
             <div class="card-body">
                         <h5 class="card-title">マリオカート8 デラックス - Switch
                        </h5>
-                        <h5 class="price">6570円</h5>
-            </a>
+                        <h5 class="price"><br><br><br>6570円</h5>
             </div>
+            </a>
             </div>
             </div>
 
@@ -205,9 +205,9 @@ integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jI
               <div class="card-body">
                           <h5 class="card-title">ゼルダの伝説 ブレス オブ ザ ワイルド - Switch
                          </h5>
-                          <h5 class="price">7678円</h5>
-              </a>
+                          <h5 class="price"><br><br><br>7678円</h5>
               </div>
+              </a>
               </div>
               </div>
 
@@ -218,9 +218,9 @@ integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jI
                 <div class="card-body">
                             <h5 class="card-title">モンスターハンターワールド:アイスボーン マスターエディション - PS4
                             </h5>
-                            <h5 class="price">4390円</h5>
-                </a>
+                            <h5 class="price"><br><br>4390円</h5>
                 </div>
+                </a>
                 </div>
                 </div>
 
@@ -231,9 +231,9 @@ integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jI
             <div class="card-body" >
              <h5 class="card-title">PS5ゲームソフト ELDEN RING
               </h5>
-             <h5 class="price">8170円</h5>
-            </a>
+             <h5 class="price"><br><br><br><br>8170円</h5>
             </div>
+            </a>
            </div>
           </div>
 
@@ -244,9 +244,9 @@ integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jI
             <div class="card-body">
                         <h5 class="card-title">【PS5】地球防衛軍6
                         </h5>
-                        <h5 class="price">7079円</h5>
-            </a>
+                        <h5 class="price"><br><br><br><br>7079円</h5>
             </div>
+            </a>
             </div>
             </div>
     
@@ -257,9 +257,9 @@ integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jI
            <div class="card-body">
              <h5 class="card-title">FIFA 23 - PS5
             </h5>
-             <h5 class="price">9700円</h5>
-           </a>
+             <h5 class="price"><br><br><br><br><br>9700円</h5>
            </div>
+           </a>
            </div>
            </div>
    
