--- a/kaihatuKOUNYUKANRYOU.html
+++ b/kaihatuKOUNYUKANRYOU.html
@@ -36,7 +36,7 @@ integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jI
         <div class="thankyou">
          <h1>お買い上げ</h1>
          <h1>ありがとうございます</h1>
-            <a href="kaihatuTOP.html"  class="TOPNIMODORU"><button class="btn btn-outline-primary  me-2"   type="button">TOPに戻る→</button></a>
+            <a href="kaihatuTOP.html"  class="TOPNIMODORU"><button class="btn btn-outline-primary btn-lg"   type="button">TOPに戻る→</button></a>
         </div>
 
 
