--- a/kaihatuSYOUSAI_SALE.html
+++ b/kaihatuSYOUSAI_SALE.html
@@ -9,6 +9,9 @@
 integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
+<link href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.7.1/css/lightbox.css" rel="stylesheet">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.7.1/js/lightbox.min.js" type="text/javascript"></script>
 </head>
 
 <body>
@@ -36,19 +39,19 @@ integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jI
     <div class="row">
       <div class="col-sm-4">
         <div class="card bg-dark text-white">
-          <img src="img/pokemon2.jpg" class="card-img" alt="..."  height="100">
+          <a href="img/pokemon2.jpg" data-lightbox="group"><img src="img/pokemon2.jpg" class="card-img" alt="..."  height="100"></a>
         </div>
       </div>
 
       <div class="col-sm-4">
         <div class="card bg-dark text-white">
-          <img src="img/pokemon3.jpg" class="card-img" alt="..."  height="100">
+          <a href="img/pokemon3.jpg" data-lightbox="group"><img src="img/pokemon3.jpg" class="card-img" alt="..."  height="100"></a>
         </div>
       </div>
 
       <div class="col-sm-4">
         <div class="card bg-dark text-white">
-          <img src="img/pokemon4.jpg" class="card-img" alt="..."  height="100">
+          <a href="img/pokemon4.jpg" data-lightbox="group"><img src="img/pokemon4.jpg" class="card-img" alt="..."  height="100"></a>
         </div>
       </div>
 
