ボタンを大きくしました

--- a/kaihatuSYOUSAI.html
+++ b/kaihatuSYOUSAI.html
@@ -38,19 +38,19 @@ integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jI
     </div>
     <div class="row">
       <div class="col-sm-4">
-        <div class="card bg-dark text-white">
+        <div class="card">
           <a href="img/pokemon2.jpg" data-lightbox="group"><img src="img/pokemon2.jpg" class="card-img" alt="..."  height="100"></a>
         </div>
       </div>
 
       <div class="col-sm-4">
-        <div class="card bg-dark text-white">
+        <div class="card">
           <a href="img/pokemon3.jpg" data-lightbox="group"><img src="img/pokemon3.jpg" class="card-img" alt="..."  height="100"></a>
         </div>
       </div>
 
       <div class="col-sm-4">
-        <div class="card bg-dark text-white">
+        <div class="card">
           <a href="img/pokemon4.jpg" data-lightbox="group"><img src="img/pokemon4.jpg" class="card-img" alt="..."  height="100"></a>
         </div>
       </div>
@@ -89,7 +89,9 @@ integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jI
   </div>
 
   <div class="setumei"> 
-        <p>『ポケットモンスター』シリーズはオープンワールドへ。ポケモンを捕まえたり、交換したり、育ててバトルに挑んだり。『ポケットモンスター』シリーズならではの遊びを、"オープンワールド"世界で楽しめます。大自然や街には、至る所にポケモンたちが息づいており、境目なく広がるフィールドを自由に冒険することができます。														
+        <p>『ポケットモンスター』シリーズはオープンワールドへ。ポケモンを捕まえたり、交換したり、育ててバトルに挑んだり。『ポケットモンスター』シリーズならではの遊びを、""オープンワールド""の世界で楽しめます。大自然や街には、至る所にポケモンたちが息づいており、境目なく広がるフィールドを自由に冒険することができます。
+          【最初のパートナー】あなたは、くさタイプの「ニャオハ」、ほのおタイプの「ホゲータ」、みずタイプの「クワッス」の3匹の中から1匹を選び冒険に出ることになります。はたして、どのように出会い、どのような物語を繰り広げるのでしょうか。
+          【伝説のポケモン「ミライドン」】他のポケモンたちをはるかに凌駕する力を持つといわれていますが、その生態は謎に包まれています。「ミライドン」の背に乗ることで、陸を走ったり、水上を泳いだり、滑空したり、崖を登ったりすることができ、さらに冒険の幅が広がります"														
         </p>
   </div>
 
