--- a/kaihatuOKINIIRI.html
+++ b/kaihatuOKINIIRI.html
@@ -34,7 +34,7 @@ integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jI
   <p class="fs-1">お気に入りに登録したものはありません</p>
   </div>
   <div class="TOPNIMODORU">
-  <a href="kaihatuTOP.html"  class="TOPNIMODORU"><button class="btn btn-outline-primary  me-2"   type="button">TOPに戻る→</button></a>
+  <a href="kaihatuTOP.html"  class="TOPNIMODORU"><button class="btn btn-outline-primary  btn-lg"   type="button">TOPに戻る→</button></a>
   </div>
 
 </body>
