placeholderを追加しました

--- a/kaihatuKOUNYU.html
+++ b/kaihatuKOUNYU.html
@@ -64,7 +64,7 @@ integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jI
       <p class="fs-2">メールアドレス</p>
       </div>
       <div class="form">
-      <input type="email" class="form-control" id="exampleFormControlInput1">
+      <input type="email" class="form-control" id="exampleFormControlInput1" >
       </div>
     </div>
     <div class="col-sm-6">
@@ -84,7 +84,7 @@ integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jI
 
     <div class="yuubinotodoke">
       <p class="fs-2">お届け先住所</p>
-      <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+      <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"  placeholder="(例)東京都○○市△△町○○マンション△△号室"></textarea>
     </div>
 
   
