--- a/kaihatuTOUROKU.html
+++ b/kaihatuTOUROKU.html
@@ -48,7 +48,7 @@ integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jI
     <p class="fs-3">メールアドレス</p>
   </div>
   <div class="text">
-    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="(例)abc@abc.com">
   </div>
   <div class="name">
     <p class="fs-3">パスワード</p>
@@ -60,13 +60,13 @@ integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jI
     <p class="fs-3">郵便番号</p>
   </div>
   <div class="text">
-    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"  placeholder="(例)×××-××××">
   </div>
   <div class="name">
     <p class="fs-3">住所</p>
   </div>
   <div class="text">
-    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="(例)東京都○○市△△町○○マンション△△号室">
   </div>
   <div class="name">
     <p class="fs-3">電話番号</p>
@@ -78,7 +78,7 @@ integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jI
     <p class="fs-3">生年月日</p>
   </div>
   <div class="text">
-    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="(例)00月00日">
   </div>
   <div class="name">
     <p class="fs-3">性別</p>
