--- a/kaihatuTOP.html
+++ b/kaihatuTOP.html
@@ -31,17 +31,14 @@ integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jI
 
       <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel" width="">
         <div class="carousel-inner">
-<<<<<<< HEAD
           <div class="carousel-item active" data-bs-interval="1000">
-            <a  href="kaihatuSYOUSAI.html"><img src="img/6107d6f78d8b1-750x421.jpg" alt = "任天堂switch" width = "640" height = "364" class="d-block w-100" class="d-block w-100" alt="..." ></a>
+            <a  href="kaihatuSYOUSAI.html"><img src="img/switch.webp" alt = "任天堂switch" width = "1200" height = "630" class="d-block w-100" class="d-block w-100" alt="..." ></a>
           </div>
           <div class="carousel-item " data-bs-interval="1000">
-            <a  href="kaihatuSYOUSAI.html"><img src="img/1.png" alt = "任天堂switch" width = "640" height = "364" class="d-block w-100" class="d-block w-100" alt="..." ></a>
+            <a  href="kaihatuSYOUSAI.html"><img src="img/sns.webp" alt = "任天堂switch" width = "1200" height = "630" class="d-block w-100" class="d-block w-100" alt="..." ></a>
           </div>
           <div class="carousel-item " data-bs-interval="1000">
-            <a  href="kaihatuSYOUSAI.html"><img src="img/PS5.jpg" alt = "任天堂switch" width = "640" height = "364" class="d-block w-100"  class="d-block w-100" alt="..."></a>
-=======
->>>>>>> bc83deb260d0b60c911a6f254d19e6178dbac5b5
+            <a  href="kaihatuSYOUSAI.html"><img src="img/ps5-buy-now-product-thumbnail-01-en-18mar22.webp" alt = "任天堂switch" width = "1200" height = "630" class="d-block w-100"  class="d-block w-100" alt="..."></a>
           </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="prev">
