--- a/kaihatuTOUROKU.html
+++ b/kaihatuTOUROKU.html
@@ -78,7 +78,7 @@ integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jI
     <p class="fs-3">生年月日</p>
   </div>
   <div class="text">
-    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="(例)00月00日">
+    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="(例)0000年00月00日">
   </div>
   <div class="name">
     <p class="fs-3">性別</p>
