画像の構成とphp画面を作りました

--- a/kaihatuTOP.html
+++ b/kaihatuTOP.html
@@ -35,7 +35,7 @@ integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jI
             <a  href="kaihatuSYOUSAI.html"><img src="img/switch.webp" alt = "任天堂switch" width = "1200" height = "630" class="d-block w-100" class="d-block w-100" alt="..." ></a>
           </div>
           <div class="carousel-item " data-bs-interval="1000">
-            <a  href="kaihatuSYOUSAI.html"><img src="img/sns.webp" alt = "任天堂switch" width = "1200" height = "630" class="d-block w-100" class="d-block w-100" alt="..." ></a>
+            <a  href="kaihatuSYOUSAI.html"><img src="img/soft/spra/sns.webp" alt = "任天堂switch" width = "1200" height = "630" class="d-block w-100" class="d-block w-100" alt="..." ></a>
           </div>
           <div class="carousel-item " data-bs-interval="1000">
             <a  href="kaihatuSYOUSAI.html"><img src="img/ps5-buy-now-product-thumbnail-01-en-18mar22.webp" alt = "任天堂switch" width = "1200" height = "630" class="d-block w-100"  class="d-block w-100" alt="..."></a>
@@ -58,7 +58,7 @@ integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jI
         <div class="row mb-3 gr-3">
         <div class="col-sm-6">
           <div class="card bg-dark text-white">
-            <a  href="kaihatuITIRAN.html" style="color:whitesmoke"><img src="img/mainvisual_02_RGB._TTW_.png" class="card-img" alt="..."  height="353%">
+            <a  href="kaihatuITIRAN.html" style="color:whitesmoke"><img src="img/soft/pokemon/mainvisual_02_RGB._TTW_.png" class="card-img" alt="..."  height="353%">
             <div class="card-img-overlay">
               <h5 class="card-title">ゲームソフト</h5>
               <p class="card-text">様々なジャンルのゲームソフトを取り扱っています</p>
