--- a/kaihatuITIRAN.html
+++ b/kaihatuITIRAN.html
@@ -266,6 +266,10 @@ integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jI
    
          </div>
         </div>
+
+        <div class="next">
+        <a  href="kaihatuITIRAN.html" style="color:black">次へ>></a>
+        </div>
     </body>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
