--- a/kaihatuITIRAN.html
+++ b/kaihatuITIRAN.html
@@ -34,7 +34,7 @@ integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jI
         <div class="col-sm-9">
         <a href="kaihatuSYOUSAI_SALE.html">
         <div class="card text-white">
-          <img src="img/nintendo.switch.jpg" class="card-img" alt="..." height="80">
+          <img src="img/game/nintendo.switch.jpg" class="card-img" alt="..." height="80">
         </div>
         </div>
         </a>
@@ -48,7 +48,7 @@ integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jI
         <div class="col-sm-9">
         <a href="kaihatuSYOUSAI_SALE.html">
         <div class="card text-white">
-          <img src="img/ps5-buy-now-product-thumbnail-01-en-18mar22.webp" class="card-img" alt="..."  height="80">
+          <img src="img/game/ps5-buy-now-product-thumbnail-01-en-18mar22.webp" class="card-img" alt="..."  height="80">
         </div>
         </div>
         </a>
@@ -70,7 +70,7 @@ integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jI
         <div class="col-sm-9">
         <a href="kaihatuSYOUSAI.html">
         <div class="card  text-white">
-          <img src="img/procon.jpg" class="card-img" alt="..."  height="100">
+          <img src="img/otherproduct/procon.jpg" class="card-img" alt="..."  height="100">
         </div>
         </div>
         </a> 
