画像を取り入れました

--- a/kaihatuITIRAN.html
+++ b/kaihatuITIRAN.html
@@ -70,7 +70,7 @@ integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jI
         <div class="col-sm-9">
         <a href="kaihatuSYOUSAI.html">
         <div class="card  text-white">
-          <img src="img/otherproduct/procon.jpg" class="card-img" alt="..."  height="100">
+          <img src="img/otherproduct/procon/procon.jpg" class="card-img" alt="..."  height="100">
         </div>
         </div>
         </a> 
